--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.27.0",
     "puppeteer-core": "^24.27.0",
